Enhance POST => /api/v1/certifications
